[gd_scene load_steps=2 format=3 uid="uid://dmu8e2ianqbh3"]

[ext_resource type="Script" uid="uid://53hydtcuyijc" path="res://scenes/UI/skill_select_menu.gd" id="1_4btfk"]

[node name="SkillSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_4btfk")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 325.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "选择技能"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="SkillList" type="ItemList" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
item_count = 1
item_0/text = "技能1"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="SkillDescription" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "选择一个技能"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="UseButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(144, 0)
layout_mode = 2
text = "使用"

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(144, 0)
layout_mode = 2
text = "取消"
